--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a href="https://t.me/Brotan4ik455" style="color:#19B5FE"> <i class="fa fa-telegram" aria-hidden="true"></i> </a>
     </footer>
     <center>
-    <a href="https://---.netlify.app/"><p style="position: relative; left: 30%; color: #0000FF;">ПЕРЕЙТИ НА ДРУГУЮ СТРАНИЦУ</p></a>
+    <a href="https://minecraft-news-additions.netlify.app/"><p style="position: relative; left: 30%; color: #0000FF;">ПЕРЕЙТИ НА ДРУГУЮ СТРАНИЦУ</p></a>
     </center>
     
     
